# thermocam

./: .AA  .gitignore  Cargo.toml  Cross.toml  Dockerfile  README.md  build.rs  formats.txt  libcamera-help.txt  test.avi
.cargo/: config.toml
data/: flir_f32.npy
output/: metadata.txt
src/: color.rs  lib.rs  main.rs  pixel.rs  rgb_color.rs  temperature_pixel.rs  thermo_image_processing.rs
src/ui/: ui.slint
